--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,17 @@
+/*Asterik wildcard to overrider default styling*/
 *{
     padding:0;
     margin:0;
     box-sizing: border-box;
+}
+/*General Styles*/
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /*Generic project styles*/
+    color:#3a3a3a;
+
 }
 
 header{
@@ -10,6 +20,7 @@ header{
 
 main{
     background-color: lightblue;
+    flex: 1 0 auto;
 
 }
 
