--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body{
     flex-direction: column;
     /*Generic project styles*/
     color:#3a3a3a;
-
     font-family: "lato", sans-serif;
 
 }
@@ -22,7 +21,9 @@ body{
 header{
     background-color: lightcoral;
 }
-
+h1{
+    font-family: "oswald",sans-serif;
+}
 main{
     background-color: lightblue;
     flex: 1 0 auto;
