--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,18 @@ body{
     flex-direction: column;
     /*Generic project styles*/
     color:#3a3a3a;
+    /*font family of lato with a backup of sans-serif*/
     font-family: "lato", sans-serif;
 
 }
 
 header{
-    background-color: lightcoral;
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position:fixed;
+    z-index:99;
+    width:100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 h1{
     font-family: "oswald",sans-serif;
