--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,3 +91,28 @@ main{
 footer{
     background-color: orange;
 }
+
+/*media query: tablets and larger (768px and up)*/
+@media screen and (min-width: 768px) {
+/*Header*/
+nav{
+    position: relative;
+    display:block;
+    box-shadow: none;
+    width:fit-content;
+    padding-right: 2rem;
+    
+}
+
+#menu{
+    display:flex;
+}
+
+#menu>li{
+    padding-left:1rem;
+}
+
+.nav-toggle-label{
+    display:none;
+}
+}
