--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,4 +115,14 @@ nav{
 .nav-toggle-label{
     display:none;
 }
+
+#logo{
+    font-size: 200%;
+    line-height: 75px;
+    margin:0 0.5rem;
+}
+
+main{
+    margin-top: 75px;
+}
 }
