--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,8 +121,15 @@ nav{
     line-height: 75px;
     margin:0 0.5rem;
 }
-
+/*Main content*/
 main{
+    /*Push main content down to be visible for larger header*/
     margin-top: 75px;
 }
+}
+
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
