--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,13 @@ body{
 
 }
 
+h1, h2, h3{
+    font-family: "oswald",sans-serif;
+    text-transform:uppercase;
+    letter-spacing: 2px;
+    color:#252525;
+}
+
 header{
     background-color: #ffffff;
     padding: 0 1rem;
@@ -35,12 +42,6 @@ header a{
     color:inherit;
 }
 
-h1{
-    font-family: "oswald",sans-serif;
-    text-transform:uppercase;
-    letter-spacing: 2px;
-    color:#252525;
-}
 
 #menu{
     letter-spacing: 4px;
@@ -94,6 +95,25 @@ main{
     height:600px;
     width:100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+
+}
+
+#cover-text{
+    /*Alpha value adds opacity*/
+    background-color: rgba(241,109,107,.7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width:80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    
+}
+
+#cover-text > h2, #cover-text > h3{
+    color: #ffffff
 }
 
 #social-networks{
@@ -144,6 +164,12 @@ nav{
 main{
     /*Push main content down to be visible for larger header*/
     margin-top: 75px;
+}
+
+/*cover text sizing*/
+#cover-text{
+    width:300px;
+    right: 50px;
 }
 }
 
