--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -49,7 +51,7 @@ header a {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -109,7 +111,8 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -125,8 +128,8 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical > div,
-#benefits-mental > div {
+#benefits-physical>div,
+#benefits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -139,22 +142,50 @@ main {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
-#benefits-image{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 #circle-cover-bg {
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
-    background: url("../images/reasons-image.webp") no-repeat center center/cover;
     margin-bottom: 20px;
-    /*Border radius will turn this into a circular image*/
+    /* Makes the square image into a circle */
     border-radius: 50%;
-    max-height: 300px;
     max-width: 300px;
-
+    max-height: 300px;
 }
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Meetup Times section */
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Creates a grid of meetup time divs over the background image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* Override the heading colour set in general styles */
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -172,6 +203,7 @@ main {
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -185,7 +217,7 @@ main {
         display: flex;
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
@@ -211,7 +243,7 @@ main {
         right: 50px;
     }
 
-    /*Reasons Section*/
+    /* Reasons section */
     #benefits-physical,
     #benefits-mental {
         display: flex;
@@ -219,12 +251,12 @@ main {
         width: 100%;
     }
 
-    #benefits-physical > div,
-    #benefits-mental > div{
+    #benefits-physical>div,
+    #benefits-mental>div {
         width: 75%;
     }
 
-    #benefits-mental > div{
+    #benefits-mental>div {
         text-align: end;
         align-self: flex-end;
     }
@@ -232,35 +264,35 @@ main {
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
 
-@media screen and (min-width: 1200px) {
-    #benefits{
-        display:flex;
+@media screen and (min-width: 1200px) {    
+    /* Reasons section */
+    #benefits {
+        display: flex;
         flex-direction: row;
     }
 
-    #benefits > div{
-        flex:1;
-        
+    #benefits > div {
+        flex: 1;
     }
 
-    #benefits-image{
-        order: 0;
+    #benefits-image {
+        order: 0
     }
 
-    #benefits-mental{
+    #benefits-mental {
         order: 1;
     }
 
-    #benefits-mental > div{
-        justify-self: flex-start;
+    #benefits-mental > div {
+        align-self: flex-start;
     }
 
-    #benefits-physical > div{
-        justify-self: flex-end;
+    #benefits-physical > div {
+        align-self: flex-end;
     }
 }
